# pyfile-pattern-renamer

./: .env.example  .gitignore  README.md  app.py  buttons.py  files.py  fileview.py  gui.py  icon.py  input.py  pyproject.toml  requirements.txt
docs/: pull_request_template.md
